  + Deprecated 'readfile'
  + cutAtPlane is deprecated in favor of cutWithPlane
  + A number of deprecated functions were removed
 
- All script executing functionality is moved to script.py
- The GUI can now be started from a nongui script
- mydict.py: changed the pickling to allow non-ascii pickling of projects
- olist.py: new module gathering list functions
- odict.py: new class KeyList


Gui
---
- GUI can be started from the nongui mode by calling a function
- Focus rectangle identifies the current viewport
- Rectangle zooming implemented
- Revised Project File menu
- Project files can be compressed


Drawing
-------
- Defaults for draw() have changed. Use view='last' and bbox='last' to keep
  camera settings unchanged.
- New drawing functions drawMarks en drawVectors
- All colors named in X11/rgb.txt file are usable.


Scripting
---------


Plugins
-------
- mesh: new class Mesh to represent geometry in (coords,connectivity) format,
  functions/methods to sweep, extrude and connect meshes.
- isopar: added more transformations('quad13','quad16','hex64'
- fe_menu: start of a Finite Element Preprocessor plugin
- export: start of a generalized exporting framework
- dxf: start of an exporter to DXF format
- curve: added PolyLine.atLength() method
- tools_menu: added general variable editor, delete all variables
- project: moved to pyFormex core 


Examples
--------
- new examples: Extrude, 
- Connectmesh: Mesh class moved into mesh plugin
- SweepBeam: expanded with extrude method
- Curves: expanded with more curve types and data sets

Manual
------
- The reference manual has been expanded largely with automatically generated documentation from the Python source docstrings. 


Project Status
--------------
We have upgraded the project status to Beta. This is a clear sign to the user that we have reached a status where the program has become largely usable, despite some still missing or unfinished functions.
