@@ -2,7 +2,7 @@
 VERSION=0.8
 # Unless you are creating an official release, a tail should be added
 # to the ${VERSION} to set a release tag. e.g. -alpha, -rc1
-RELEASE=${VERSION}-a1
+RELEASE=${VERSION}-a2
 
 PROGRAM= pyformex.py
 IMAGES= BarrelVault Baumkuchen DoubleLayer Geodesic Hyparcap KochLine \
